[gd_scene load_steps=11 format=3 uid="uid://ckm2vy8ql2cep"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_wbcn5"]
[ext_resource type="VideoStream" path="res://Animaciones/intro.ogv" id="2_arc6o"]
[ext_resource type="FontFile" uid="uid://nrp664l5g3ws" path="res://Fonts/Lilita_One,Rubik_Scribble/Lilita_One/LilitaOne-Regular.ttf" id="3_ntt3m"]
[ext_resource type="StyleBox" uid="uid://xj053q2yvb2t" path="res://Styles/ButtonStyleMainMenu.tres" id="4_tfcre"]
[ext_resource type="Texture2D" uid="uid://bxcye6jj4wx87" path="res://Iconos/icono_gdv.png" id="5_50k6m"]
[ext_resource type="Texture2D" uid="uid://ckbnjlxx6wuqk" path="res://Iconos/icono_pgj.png" id="6_4yb8b"]
[ext_resource type="Texture2D" uid="uid://b0anwynowlpqc" path="res://Iconos/icono_esp.png" id="7_3q4do"]
[ext_resource type="Texture2D" uid="uid://cp04aejp14vxs" path="res://Iconos/icono_ing.png" id="8_dhwk5"]
[ext_resource type="AudioStream" uid="uid://t0hgifsewg7h" path="res://Audio/audio_oceano_4min_mp3.mp3" id="9_n63sa"]

[sub_resource type="ImageTexture" id="ImageTexture_e5q1v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wbcn5")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -745.0
offset_top = -460.0
offset_right = 745.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_arc6o")
autoplay = true
expand = true
loop = true

[node name="BotonesPrincipales" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BotonJugar" type="Button" parent="BotonesPrincipales"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ntt3m")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("4_tfcre")
theme_override_styles/hover = ExtResource("4_tfcre")
theme_override_styles/pressed = ExtResource("4_tfcre")
theme_override_styles/disabled = ExtResource("4_tfcre")
theme_override_styles/focus = ExtResource("4_tfcre")
text = "Jugar
"

[node name="BotonCreditos" type="Button" parent="BotonesPrincipales"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ntt3m")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("4_tfcre")
theme_override_styles/hover = ExtResource("4_tfcre")
theme_override_styles/pressed = ExtResource("4_tfcre")
theme_override_styles/disabled = ExtResource("4_tfcre")
theme_override_styles/focus = ExtResource("4_tfcre")
text = "Créditos
"

[node name="BotonSalir" type="Button" parent="BotonesPrincipales"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ntt3m")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("4_tfcre")
theme_override_styles/hover = ExtResource("4_tfcre")
theme_override_styles/pressed = ExtResource("4_tfcre")
theme_override_styles/disabled = ExtResource("4_tfcre")
theme_override_styles/focus = ExtResource("4_tfcre")
text = "Salir"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -238.5
offset_right = 250.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.588235, 0.603922, 1)
theme_override_colors/font_shadow_color = Color(0.0470588, 0.235294, 0.301961, 1)
theme_override_fonts/font = ExtResource("3_ntt3m")
theme_override_font_sizes/font_size = 100
text = "Jam-per"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Contactos" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -242.0
offset_right = 221.0
offset_bottom = 208.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Contactos"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_50k6m")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Contactos"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_4yb8b")
expand_mode = 1
stretch_mode = 5

[node name="MenuButton" type="MenuButton" parent="."]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -202.0
offset_top = 30.0
offset_right = -52.0
offset_bottom = 110.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("4_tfcre")
theme_override_styles/pressed = ExtResource("4_tfcre")
theme_override_styles/hover = ExtResource("4_tfcre")
theme_override_styles/disabled = ExtResource("4_tfcre")
theme_override_styles/focus = ExtResource("4_tfcre")
text = "Idioma"
icon = SubResource("ImageTexture_e5q1v")
flat = false
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Español"
popup/item_1/checked = true
popup/item_1/id = 1

[node name="Idiomas" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 170.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
alignment = 1
metadata/_edit_group_ = true

[node name="BotonEspañol" type="Button" parent="Idiomas"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("7_3q4do")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BotonIngles" type="Button" parent="Idiomas"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("8_dhwk5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_n63sa")
autoplay = true

[node name="BotonControles" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 130.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ntt3m")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("4_tfcre")
theme_override_styles/hover = ExtResource("4_tfcre")
theme_override_styles/pressed = ExtResource("4_tfcre")
theme_override_styles/disabled = ExtResource("4_tfcre")
theme_override_styles/focus = ExtResource("4_tfcre")
text = "Controles
"

[connection signal="pressed" from="BotonesPrincipales/BotonJugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="BotonesPrincipales/BotonCreditos" to="." method="_on_boton_creditos_pressed"]
[connection signal="pressed" from="BotonesPrincipales/BotonSalir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="toggled" from="MenuButton" to="." method="_on_menu_button_toggled"]
[connection signal="pressed" from="Idiomas/BotonEspañol" to="." method="_on_boton_español_pressed"]
[connection signal="pressed" from="Idiomas/BotonIngles" to="." method="_on_boton_ingles_pressed"]
[connection signal="pressed" from="BotonControles" to="." method="_on_boton_controles_pressed"]
